svc-shopping.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: shopping-app
  name: shopping-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
     app: shopping-app
  type: ClusterIP
