svc-socialmedia.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: socialmedia-app
  name: socialmedia-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
     app: socialmedia-app
  type: ClusterIP
