svc.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tch-app
  name: tch-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: tch-demo
  type: ClusterIP
